Ensure that no module can make scrollbars appear.

--- a/client/style.css
+++ b/client/style.css
@@ -19,6 +19,7 @@ html, body, #containers {
     height: 100%;
     background-color: black;
     cursor: none !important;
+    overflow: hidden;
 }
 .container {
     margin: 0;
